gestion des dimensions d'écran (début)

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,93 +9,93 @@
 
     <TextView
         android:id="@+id/textPermission"
-        android:layout_width="79dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="482dp"
-        android:layout_marginEnd="242dp"
-        android:layout_marginBottom="230dp"
+        android:layout_width="@dimen/activity_home_textView_title_permission_width"
+        android:layout_height="@dimen/activity_home_textView_title_permission_height"
+        android:layout_marginStart="@dimen/activity_home_textView_title_permission_margin_start"
+        android:layout_marginTop="@dimen/activity_home_textView_title_permission_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_textView_title_permission_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_textView_title_permission_margin_bottom"
         android:text="@string/texte_permissions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_textView_title_perm_constraintHorizontal_bias"
+        app:layout_constraintVertical_bias="@dimen/activity_home_textView_title_perm_constraintVertical_bias"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textTitre"
-        android:layout_width="89dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="@dimen/activity_home_textView_title_width"
+        android:layout_height="@dimen/activity_home_textView_title_height"
+        android:layout_marginStart="@dimen/activity_home_textView_title_margin_start"
+        android:layout_marginTop="@dimen/activity_home_textView_title_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_textView_title_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_textView_title_margin_bottom"
         android:text="@string/bonjour"
-        android:textSize="24sp"
+        android:textSize="@dimen/activity_home_textView_title_size"
         app:layout_constraintBottom_toTopOf="@+id/buttonCycle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_textView_title_constraintHorizontal_bias"
+        app:layout_constraintVertical_bias="@dimen/activity_home_textView_title_constraintVertical_bias" />
 
     <ImageView
         android:id="@+id/isenLogo"
-        android:layout_width="119dp"
-        android:layout_height="125dp"
-        android:layout_marginStart="146dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="146dp"
+        android:layout_width="@dimen/activity_home_imageView_logo_width"
+        android:layout_height="@dimen/activity_home_imageView_logo_height"
+        android:layout_marginStart="@dimen/activity_home_imageView_logo_margin_start"
+        android:layout_marginTop="@dimen/activity_home_imageView_logo_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_imageView_logo_margin_end"
         android:background="@drawable/isen"
         android:contentDescription="@string/desc_logo"
         app:layout_constraintBottom_toTopOf="@+id/textTitre"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_logo_constraintHorizontal_bias"
+        app:layout_constraintVertical_bias="@dimen/activity_home_logo_constraintVertical_bias"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textCycle"
-        android:layout_width="75dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="332dp"
-        android:layout_marginEnd="250dp"
-        android:layout_marginBottom="380dp"
+        android:layout_width="@dimen/activity_home_textView_title_cycle_width"
+        android:layout_height="@dimen/activity_home_textView_title_cycle_height"
+        android:layout_marginStart="@dimen/activity_home_textView_title_cycle_margin_start"
+        android:layout_marginTop="@dimen/activity_home_textView_title_cycle_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_textView_title_cycle_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_textView_title_cycle_margin_bottom"
         android:text="@string/texte_cycle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_textView_title_cycle_constraintHorizontal_bias"
+        app:layout_constraintVertical_bias="@dimen/activity_home_textView_cycle_constraintVertical_bias"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textWeb"
-        android:layout_width="81dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="240dp"
-        android:layout_marginTop="482dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="230dp"
+        android:layout_width="@dimen/activity_home_textView_title_web_width"
+        android:layout_height="@dimen/activity_home_textView_title_web_height"
+        android:layout_marginStart="@dimen/activity_home_textView_title_web_margin_start"
+        android:layout_marginTop="@dimen/activity_home_textView_title_web_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_textView_title_web_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_textView_title_web_margin_bottom"
         android:text="@string/texte_web"
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_textView_title_web_constraintHorizontal_bias"
+        app:layout_constraintVertical_bias="@dimen/activity_home_textView_web_constraintVertical_bias"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/buttonPermission"
-        android:layout_width="79dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="400dp"
-        android:layout_marginEnd="242dp"
-        android:layout_marginBottom="248dp"
+        android:layout_width="@dimen/activity_home_imageButton_width"
+        android:layout_height="@dimen/activity_home_imageButton_height"
+        android:layout_marginStart="@dimen/activity_home_imageButton_permission_margin_start"
+        android:layout_marginTop="@dimen/activity_home_imageButton_permission_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_imageButton_permission_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_imageButton_permission_margin_bottom"
         android:background="#D32F2F"
         android:contentDescription="@string/desc_bouton_permission"
         android:scaleType="fitXY"
@@ -103,41 +103,41 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonWeb"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="@dimen/activity_home_imageButton_web_constraintVertical_bias"
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_imageButton_permission_constraintHorizontal_bias"
         app:srcCompat="@drawable/phone_white" />
 
     <ImageButton
         android:id="@+id/buttonWeb"
-        android:layout_width="79dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="243dp"
-        android:layout_marginTop="401dp"
-        android:layout_marginEnd="89dp"
-        android:layout_marginBottom="246dp"
+        android:layout_width="@dimen/activity_home_imageButton_width"
+        android:layout_height="@dimen/activity_home_imageButton_height"
+        android:layout_marginStart="@dimen/activity_home_imageButton_web_margin_start"
+        android:layout_marginTop="@dimen/activity_home_imageButton_web_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_imageButton_web_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_imageButton_web_margin_bottom"
         android:background="#D32F2F"
         android:contentDescription="@string/desc_bouton_web"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_imageButton_web_constraintHorizontal_bias"
         app:layout_constraintStart_toEndOf="@+id/textWeb"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.004"
+        app:layout_constraintVertical_bias="@dimen/activity_home_imageButton_web_constraintVertical_bias"
         app:srcCompat="@drawable/inbox" />
 
     <ImageButton
         android:id="@+id/buttonCycle"
-        android:layout_width="79dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="242dp"
-        android:layout_marginBottom="398dp"
+        android:layout_width="@dimen/activity_home_imageButton_width"
+        android:layout_height="@dimen/activity_home_imageButton_height"
+        android:layout_marginStart="@dimen/activity_home_imageButton_cycle_margin_start"
+        android:layout_marginTop="@dimen/activity_home_imageButton_cycle_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_imageButton_cycle_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_imageButton_cycle_margin_bottom"
         android:background="#D32F2F"
         android:contentDescription="@string/desc_bouton_cycle"
         android:scaleType="fitXY"
@@ -145,60 +145,60 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonSave"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_imageButton_cycle_constraintHorizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="@dimen/activity_home_imageButton_cycle_constraintVertical_bias"
         app:srcCompat="@drawable/comment" />
 
     <ImageButton
         android:id="@+id/buttonSave"
-        android:layout_width="79dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="251dp"
-        android:layout_marginEnd="90dp"
+        android:layout_width="@dimen/activity_home_imageButton_width"
+        android:layout_height="@dimen/activity_home_imageButton_height"
+        android:layout_marginStart="@dimen/activity_home_imageButton_save_margin_start"
+        android:layout_marginTop="@dimen/activity_home_imageButton_save_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_imageButton_save_margin_end"
         android:background="#D32F2F"
         android:contentDescription="@string/save_texte"
         android:scaleType="fitXY"
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/buttonWeb"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_imageButton_save_constraintHorizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="@dimen/activity_home_imageButton_save_constraintVertical_bias"
         app:srcCompat="@drawable/sim" />
 
     <TextView
         android:id="@+id/Sauvegarde"
-        android:layout_width="81dp"
-        android:layout_height="17dp"
-        android:layout_marginStart="250dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginBottom="380dp"
+        android:layout_width="@dimen/activity_home_textView_title_save_width"
+        android:layout_height="@dimen/activity_home_textView_title_save_height"
+        android:layout_marginStart="@dimen/activity_home_textView_title_save_margin_start"
+        android:layout_marginEnd="@dimen/activity_home_textView_title_save_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_textView_title_save_margin_bottom"
         android:text="@string/save_texte"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_textView_title_save_constraintHorizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSave"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="@dimen/activity_home_textView_title_save_constraintVertical_bias" />
 
     <ImageButton
         android:id="@+id/disconnectButton"
-        android:layout_width="76dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="617dp"
+        android:layout_width="@dimen/activity_home_imageButton_deco_width"
+        android:layout_height="@dimen/activity_home_imageButton_deco_height"
+        android:layout_marginTop="@dimen/activity_home_imageButton_deco_margin_top"
+        android:layout_marginEnd="@dimen/activity_home_imageButton_deco_margin_end"
+        android:layout_marginBottom="@dimen/activity_home_imageButton_deco_margin_bottom"
         android:contentDescription="@string/desc_disconnect"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="@dimen/activity_home_imageButton_deco_constraintHorizontal_bias"
         app:layout_constraintStart_toEndOf="@+id/isenLogo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="@dimen/activity_home_imageButton_deco_constraintVertical_bias"
         app:srcCompat="@android:drawable/ic_lock_power_off" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
