--- a/app/src/main/res/layout/activity_storage.xml
+++ b/app/src/main/res/layout/activity_storage.xml
@@ -11,69 +11,68 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/texte_date"
-        android:textSize="18sp"
+        android:textSize="@dimen/activity_storage_textView_datetitle_size"
         app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toStartOf="@+id/date"
-        app:layout_constraintHorizontal_bias="0.748"
+        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_datetitle_Horizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstName"
-        app:layout_constraintVertical_bias="0.423" />
+        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_datetitle_constraintVertical_bias" />
 
     <EditText
         android:id="@+id/lastName"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/activity_storage_textView_lastname_width"
+        android:layout_height="@dimen/activity_storage_textView_lastname_height"
         android:hint="@string/texte_nom"
         android:textColorHint="#52afaa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_lastname_constraintHorizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.201" />
+        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_lastname_constraintVertical_bias" />
 
     <EditText
         android:id="@+id/firstName"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/activity_storage_textView_firstname_width"
+        android:layout_height="@dimen/activity_storage_textView_firstname_height"
         android:hint="@string/texte_prenom"
         android:textColorHint="#52afaa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_firstname_constraintHorizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.327" />
+        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_firstname_constraintVertical_bias" />
 
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="216dp"
+        android:layout_marginStart="@dimen/activity_storage_textView_date_margin"
         android:text="@string/date_non_select"
-        android:textSize="18sp"
+        android:textSize="@dimen/activity_storage_textView_date_size"
         app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.084"
+        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_date_constraintHorizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstName"
-        app:layout_constraintVertical_bias="0.423" />
+        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_date_constraintVertical_bias" />
 
     <Button
         android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="374dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="307dp"
+        android:layout_marginStart="@dimen/activity_storage_button_save_margin_start"
+        android:layout_marginTop="@dimen/activity_storage_button_save_margin_top"
+        android:layout_marginEnd="@dimen/activity_storage_button_save_margin_end"
+        android:layout_marginBottom="@dimen/activity_storage_button_save_margin_bottom"
         android:background="@color/colorPrimary"
-        android:padding="8dp"
+        android:padding="@dimen/activity_storage_button_padding"
         android:text="@string/save_texte"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateTitle"
         app:layout_constraintTop_toTopOf="parent" />
@@ -82,36 +81,36 @@
         android:id="@+id/show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="466dp"
-        android:layout_marginEnd="153dp"
-        android:layout_marginBottom="229dp"
+        android:layout_marginStart="@dimen/activity_storage_button_read_margin_start"
+        android:layout_marginTop="@dimen/activity_storage_button_read_margin_top"
+        android:layout_marginEnd="@dimen/activity_storage_button_read_margin_end"
+        android:layout_marginBottom="@dimen/activity_storage_button_read_margin_bottom"
         android:background="@color/colorPrimary"
-        android:padding="8dp"
+        android:padding="@dimen/activity_storage_button_padding"
         android:text="@string/read_texte"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="@dimen/activity_storage_button_read_constraintHorizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="@dimen/activity_storage_button_read_constraintVertical_bias" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginTop="58dp"
-        android:layout_marginEnd="165dp"
-        android:layout_marginBottom="654dp"
+        android:layout_marginStart="@dimen/activity_storage_textView_title_margin_start"
+        android:layout_marginTop="@dimen/activity_storage_textView_title_margin_top"
+        android:layout_marginEnd="@dimen/activity_storage_textView_title_margin_end"
+        android:layout_marginBottom="@dimen/activity_storage_textView_title_margin_bottom"
         android:text="@string/info_texte"
-        android:textSize="30sp"
+        android:textSize="@dimen/activity_storage_textView_title_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.366"
+        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_title_constraintHorizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.09" />
+        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_title_constraintVertical_bias" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
