--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
+    android:paddingTop="@dimen/item_contact_padding"
+    android:paddingBottom="@dimen/item_contact_padding"
     >
 
     <TextView
         android:id="@+id/contactName"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="@dimen/item_contact_textView_height"
+        android:layout_weight="@dimen/item_contact_textView_weight" />
 
 </LinearLayout>
